[gd_scene load_steps=10 format=3 uid="uid://hlprn1r30fy8"]

[ext_resource type="Texture2D" uid="uid://cs8d5juyu1x0r" path="res://assets/sprites/enemies/bat.png" id="1_3blfj"]
[ext_resource type="Script" path="res://scenes/gamestates/dungon/enemies/bat/Bat.gd" id="1_bcrx8"]

[sub_resource type="Animation" id="Animation_6oxfr"]
resource_name = "defualt"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cqlgy"]
_data = {
"default": SubResource("Animation_6oxfr")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_iea7x"]
radius = 9.05539

[sub_resource type="CircleShape2D" id="CircleShape2D_3vuvl"]
radius = 33.0151

[sub_resource type="CircleShape2D" id="CircleShape2D_8yeqo"]
radius = 9.05539

[sub_resource type="Gradient" id="Gradient_pf80b"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_euyq5"]
gradient = SubResource("Gradient_pf80b")

[node name="Bat" type="CharacterBody2D"]
z_index = 3
script = ExtResource("1_bcrx8")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_3blfj")
hframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_cqlgy")
}
autoplay = "default"

[node name="Room Collision Box" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_iea7x")

[node name="Targeting Box" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Targeting Box"]
shape = SubResource("CircleShape2D_3vuvl")
debug_color = Color(0.65098, 0.521569, 0, 0.419608)

[node name="Hit Box" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hit Box"]
shape = SubResource("CircleShape2D_8yeqo")
debug_color = Color(1, 0.0156863, 0, 0.419608)

[node name="Sprite2D" type="Sprite2D" parent="Hit Box"]
visible = false
position = Vector2(-1.90735e-06, 0)
scale = Vector2(0.109375, 0.125)
texture = SubResource("GradientTexture2D_euyq5")

[node name="InvulTimer" type="Timer" parent="."]

[connection signal="body_entered" from="Targeting Box" to="." method="_on_player_rect_body_entered"]
[connection signal="area_entered" from="Hit Box" to="." method="_on_hit_box_area_entered"]
[connection signal="timeout" from="InvulTimer" to="." method="_on_invul_timer_timeout"]
